<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/default_padding">

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_margin"
        >

        <andyanika.speechaccent.RingChart
            android:id="@+id/ring_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />

        <Button
            android:id="@+id/btn_record"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:background="@drawable/btn_record" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_play"
            android:visibility="gone"/>
    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/default_margin"
        android:progress="10"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:00"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"/>


    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_record"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@color/red"
        android:padding="@dimen/default_padding"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/text_native_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/which_language_native"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_native"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_record_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/which_language_record"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_record_language"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textSampleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="fill_horizontal"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>