<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/default_padding">

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center">

            <andyanika.speechaccent.RingChart
                android:id="@+id/ring_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/btn_play"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:background="@drawable/btn_play" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/default_margin"
            android:progress="10" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarFadeDuration="1000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">


            <TextView
                android:id="@+id/textLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/which_language_to_listen"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinner_language"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/which_accent_to_listen"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinner_accent"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_record"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:background="@color/green"
                android:padding="@dimen/default_padding"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/textSampleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:gravity="fill_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>